@@ -12,6 +12,7 @@ perl:
   - "5.18"
   - "5.20"
   - "5.22"
+  - "5.24"
 
 script:
   - perl util/prove
